name:                funpaala
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/YoshikuniJujo/funpaala#readme
license:             BSD3
license-file:        LICENSE
author:              Yoshikuni Jujo
maintainer:          PAF01143@nifty.ne.jp
copyright:           2016 Yoshikuni Jujo
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     Funpaala
  ghc-options:         -fno-warn-tabs
  build-depends:       base >= 4.7 && < 5,
                       random, strict, io-machine, containers, time
  default-language:    Haskell2010

executable funpaala-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, funpaala
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/YoshikuniJujo/funpaala
